feat: Add image advertisement, Optimize the existing component structure

--- a/src/components/card/index.component.html
+++ b/src/components/card/index.component.html
@@ -1,7 +1,7 @@
 <div
   class="card-container progrcode"
-  *ngIf="dataSource.desc && dataSource.desc[0] === '!'; else other"
-  [innerHTML]="html | safeHtml"
+  *ngIf="isCode; else other"
+  [innerHTML]="description | safeHtml"
   #root
 ></div>
 
@@ -57,8 +57,8 @@
         <div
           (click)="jumpService.goUrl($event, dataSource.url)"
           class="cursor-pointer desc dark-text ellipsis3"
-          [innerHTML]="dataSource.desc"
-          [title]="dataSource.__desc__ || dataSource.desc"
+          [innerHTML]="description"
+          [title]="dataSource.__desc__ || description"
         ></div>
         <tag-list [data]="dataSource.tags" *ngIf="dataSource.tags?.length" />
       </div>
@@ -96,7 +96,7 @@
         ></div>
         <div
           class="action-item dark-border-color"
-          *ngIf="isLogin && indexs.length === 4"
+          *ngIf="isLogin"
           nz-tooltip
           [nzTooltipTitle]="$t('_move')"
           nz-icon
@@ -123,7 +123,7 @@
     <!-- example style -->
     <div
       class="card-container example2 dark-bg dark-white dark-shadow"
-      [class.noDesc]="!dataSource.desc"
+      [class.noDesc]="!description"
       *ngSwitchCase="'example'"
       (click)="jumpService.goUrl($event, dataSource.url)"
     >
@@ -151,16 +151,13 @@
         <app-logo [src]="dataSource.icon || ''" [name]="dataSource.name" />
         <div
           class="right-box ellipsis"
-          [title]="dataSource.__desc__ || dataSource.desc"
+          [title]="dataSource.__desc__ || description"
         >
           <div
             class="title ellipsis dark-white"
             [innerHTML]="dataSource.name"
           ></div>
-          <div
-            class="desc dark-text ellipsis"
-            [innerHTML]="dataSource.desc"
-          ></div>
+          <div class="desc dark-text ellipsis" [innerHTML]="description"></div>
         </div>
       </div>
     </div>
@@ -199,7 +196,7 @@
         />
         <div
           class="right-box ellipsis"
-          [title]="dataSource.__desc__ || dataSource.desc"
+          [title]="dataSource.__desc__ || description"
         >
           <div
             class="title ellipsis dark-white"
@@ -222,7 +219,7 @@
           <div
             class="top dark-border-color"
             [class.border-transparent]="
-              !dataSource.desc && !dataSource.tags?.length
+              !description && !dataSource.tags?.length
             "
           >
             <app-logo
@@ -239,9 +236,9 @@
           <div class="p-2.5">
             <div
               class="desc ellipsis3 dark-white"
-              *ngIf="dataSource.desc"
-              [title]="dataSource.__desc__ || dataSource.desc"
-              [innerHTML]="dataSource.desc"
+              *ngIf="description"
+              [title]="dataSource.__desc__ || description"
+              [innerHTML]="description"
             ></div>
             <tag-list
               *ngIf="
@@ -302,11 +299,8 @@
           ></div>
         </div>
 
-        <div class="right-box" [title]="dataSource.__desc__ || dataSource.desc">
-          <pre
-            class="desc dark-text ellipsis"
-            [innerHTML]="dataSource.desc"
-          ></pre>
+        <div class="right-box" [title]="dataSource.__desc__ || description">
+          <pre class="desc dark-text ellipsis" [innerHTML]="description"></pre>
         </div>
       </div>
 
