--- a/src/components/edit-class/index.component.html
+++ b/src/components/edit-class/index.component.html
@@ -1,6 +1,6 @@
 <nz-modal
   [(nzVisible)]="showModal"
-  [nzTitle]="title"
+  [nzTitle]="isEdit ? $t('_edit') : $t('_add')"
   (nzOnCancel)="onCancel()"
   (nzOnOk)="handleOk()"
 >
