--- a/src/view/system/web/index.component.html
+++ b/src/view/system/web/index.component.html
@@ -20,8 +20,7 @@
     {{ $t('_backup') }}
   </button>
 
-  <label
-    id="file2"
+  <button
     nz-button
     nz-tooltip
     nzTooltipPlacement="bottom"
@@ -35,7 +34,7 @@
       accept=".json"
       class="file-upload"
     />
-  </label>
+  </button>
 
   <div class="tip2">
     {{ $t('_errCountTip', { count: settings.errorUrlCount || 0 }) }}
@@ -47,17 +46,17 @@
     (nzSelectedIndexChange)="onTabChange($event)"
   >
     <nz-tab [nzTitle]="$t('_mgr1')">
-      <button nz-button nzType="primary" (click)="toggleCreateModal()">
+      <button nz-button nzType="primary" (click)="openCreateClass()">
         {{ $t('_addTag') }}
       </button>
       <button
         nz-popconfirm
         [nzPopconfirmTitle]="$t('_confirmDel')"
         nzPopconfirmPlacement="bottom"
-        (nzOnConfirm)="onBatchDelete(1)"
+        (nzOnConfirm)="onBatchDelete()"
         nz-button
         nzDanger
-        class="ml-2.5"
+        style="margin-left: 10px"
         [disabled]="setOfCheckedId.size <= 0"
       >
         {{ $t('_batchDel') }}
@@ -72,10 +71,9 @@
       >
         <thead>
           <tr>
-            <th
-              [nzChecked]="checkedAll"
-              (nzCheckedChange)="onAllChecked($event, 1)"
-            ></th>
+            <th [nzChecked]="checkedAll" (nzCheckedChange)="onCheckAll($event)">
+              ({{ setOfCheckedId.size }})
+            </th>
             <th>{{ $t('_icon') }}</th>
             <th>{{ $t('_tagName') }}</th>
             <th>{{ $t('_onlyOwnVisible') }}</th>
@@ -85,8 +83,8 @@
         <tbody>
           <tr *ngFor="let data of websiteList; let idx = index">
             <td
-              [nzChecked]="setOfCheckedId.has(data.title)"
-              (nzCheckedChange)="onItemChecked(data.title, $event)"
+              [nzChecked]="setOfCheckedId.has(data.id)"
+              (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
               <app-logo [src]="data.icon || ''" [name]="data.title" />
@@ -105,14 +103,14 @@
               <a (click)="moveOneDown(idx)" class="ml-2.5">{{
                 $t('_moveDown')
               }}</a>
-              <a (click)="handleEditBtn(data, idx)" class="ml-2.5">{{
+              <a (click)="openEditClass(data)" class="ml-2.5">{{
                 $t('_edit')
               }}</a>
               <a
                 nz-popconfirm
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleConfirmDelOne(idx)"
+                (nzOnConfirm)="handleDeleteClass(data.id)"
                 class="color-red ml-2.5"
               >
                 {{ $t('_del') }}
@@ -134,7 +132,7 @@
         <nz-option
           *ngFor="let item of websiteList"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -142,7 +140,7 @@
       <button
         nz-button
         nzType="primary"
-        (click)="toggleCreateModal()"
+        (click)="openCreateClass()"
         style="margin-left: 20px"
       >
         {{ $t('_addTag') }}
@@ -151,10 +149,10 @@
         nz-popconfirm
         [nzPopconfirmTitle]="$t('_confirmDel')"
         nzPopconfirmPlacement="bottom"
-        (nzOnConfirm)="onBatchDelete(2)"
+        (nzOnConfirm)="onBatchDelete()"
         nz-button
         nzDanger
-        class="ml-2.5"
+        style="margin-left: 10px"
         [disabled]="setOfCheckedId.size <= 0"
       >
         {{ $t('_batchDel') }}
@@ -169,10 +167,9 @@
       >
         <thead>
           <tr>
-            <th
-              [nzChecked]="checkedAll"
-              (nzCheckedChange)="onAllChecked($event, 2)"
-            ></th>
+            <th [nzChecked]="checkedAll" (nzCheckedChange)="onCheckAll($event)">
+              ({{ setOfCheckedId.size }})
+            </th>
             <th>{{ $t('_icon') }}</th>
             <th>{{ $t('_tagName') }}</th>
             <th>{{ $t('_onlyOwnVisible') }}</th>
@@ -182,8 +179,8 @@
         <tbody>
           <tr *ngFor="let data of twoTableData; let idx = index">
             <td
-              [nzChecked]="setOfCheckedId.has(data.title)"
-              (nzCheckedChange)="onItemChecked(data.title, $event)"
+              [nzChecked]="setOfCheckedId.has(data.id)"
+              (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
               <app-logo [src]="data.icon || ''" [name]="data.title" />
@@ -202,17 +199,17 @@
               <a (click)="moveTwoDown(idx)" class="ml-2.5">{{
                 $t('_moveDown')
               }}</a>
-              <a (click)="handleEditBtn(data, idx)" class="ml-2.5">{{
+              <a (click)="openEditClass(data)" class="ml-2.5">{{
                 $t('_edit')
               }}</a>
-              <a (click)="openMoveWebModal(data, idx, 2)" class="ml-2.5">{{
+              <a (click)="openMoveWebModal(data, 2)" class="ml-2.5">{{
                 $t('_move')
               }}</a>
               <a
                 nz-popconfirm
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleConfirmDelTwo(idx)"
+                (nzOnConfirm)="handleDeleteClass(data.id)"
                 class="color-red ml-2.5"
               >
                 {{ $t('_del') }}
@@ -234,7 +231,7 @@
         <nz-option
           *ngFor="let item of websiteList"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -249,7 +246,7 @@
         <nz-option
           *ngFor="let item of twoTableData"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -257,7 +254,7 @@
       <button
         nz-button
         nzType="primary"
-        (click)="toggleCreateModal()"
+        (click)="openCreateClass()"
         style="margin-left: 20px"
       >
         {{ $t('_addTag') }}
@@ -266,10 +263,10 @@
         nz-popconfirm
         [nzPopconfirmTitle]="$t('_confirmDel')"
         nzPopconfirmPlacement="bottom"
-        (nzOnConfirm)="onBatchDelete(3)"
+        (nzOnConfirm)="onBatchDelete()"
         nz-button
         nzDanger
-        class="ml-2.5"
+        style="margin-left: 10px"
         [disabled]="setOfCheckedId.size <= 0"
       >
         {{ $t('_batchDel') }}
@@ -284,10 +281,9 @@
       >
         <thead>
           <tr>
-            <th
-              [nzChecked]="checkedAll"
-              (nzCheckedChange)="onAllChecked($event, 3)"
-            ></th>
+            <th [nzChecked]="checkedAll" (nzCheckedChange)="onCheckAll($event)">
+              ({{ setOfCheckedId.size }})
+            </th>
             <th>{{ $t('_icon') }}</th>
             <th>{{ $t('_tagName') }}</th>
             <th>{{ $t('_onlyOwnVisible') }}</th>
@@ -297,8 +293,8 @@
         <tbody>
           <tr *ngFor="let data of threeTableData; let idx = index">
             <td
-              [nzChecked]="setOfCheckedId.has(data.title)"
-              (nzCheckedChange)="onItemChecked(data.title, $event)"
+              [nzChecked]="setOfCheckedId.has(data.id)"
+              (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td>
               <app-logo [src]="data.icon || ''" [name]="data.title" />
@@ -317,17 +313,17 @@
               <a (click)="moveThreeDown(idx)" class="ml-2.5">{{
                 $t('_moveDown')
               }}</a>
-              <a (click)="handleEditBtn(data, idx)" class="ml-2.5">{{
+              <a (click)="openEditClass(data)" class="ml-2.5">{{
                 $t('_edit')
               }}</a>
-              <a (click)="openMoveWebModal(data, idx, 3)" class="ml-2.5">{{
+              <a (click)="openMoveWebModal(data, 3)" class="ml-2.5">{{
                 $t('_move')
               }}</a>
               <a
                 nz-popconfirm
                 [nzPopconfirmTitle]="$t('_delWarn')"
                 nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleConfirmDelThree(idx)"
+                (nzOnConfirm)="handleDeleteClass(data.id)"
                 class="color-red ml-2.5"
               >
                 {{ $t('_del') }}
@@ -349,7 +345,7 @@
         <nz-option
           *ngFor="let item of websiteList"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -364,7 +360,7 @@
         <nz-option
           *ngFor="let item of twoTableData"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -379,7 +375,7 @@
         <nz-option
           *ngFor="let item of threeTableData"
           [nzLabel]="item.title"
-          [nzValue]="item.title"
+          [nzValue]="item.id"
         >
         </nz-option>
       </nz-select>
@@ -393,24 +389,19 @@
         {{ $t('_addWeb') }}（{{ websiteTableData.length }}）
       </button>
       <button
-        nz-button
-        nzType="primary"
-        nzDanger
-        (click)="getAllErrorWeb()"
-        style="margin: 0 10px"
-      >
-        {{ $t('_getErrorWeb') }}
-      </button>
-      <button
         nz-popconfirm
         [nzPopconfirmTitle]="$t('_confirmDel')"
         nzPopconfirmPlacement="bottom"
-        (nzOnConfirm)="onBatchDelete(4)"
+        (nzOnConfirm)="onBatchDelete()"
         nz-button
         nzDanger
         [disabled]="setOfCheckedId.size <= 0"
+        style="margin: 0 10px"
       >
         {{ $t('_batchDel') }}
+      </button>
+      <button nz-button nzType="primary" nzDanger (click)="getErrorWebs()">
+        {{ $t('_getErrorWeb') }}
       </button>
 
       <nz-table
@@ -425,8 +416,10 @@
             <th
               nzWidth="70px"
               [nzChecked]="checkedAll"
-              (nzCheckedChange)="onAllChecked($event, 4)"
-            ></th>
+              (nzCheckedChange)="onCheckAll($event)"
+            >
+              ({{ setOfCheckedId.size }})
+            </th>
             <th nzWidth="60px" class="text-center">{{ $t('_action') }}</th>
             <th nzWidth="70px">{{ $t('_status') }}</th>
             <th nzWidth="80px">{{ $t('_icon') }}</th>
@@ -440,8 +433,8 @@
         <tbody>
           <tr *ngFor="let data of websiteTableData; let idx = index">
             <td
-              [nzChecked]="setOfCheckedId.has(data.name)"
-              (nzCheckedChange)="onItemChecked(data.name, $event)"
+              [nzChecked]="setOfCheckedId.has(data.id)"
+              (nzCheckedChange)="onItemChecked(data.id, $event)"
             ></td>
             <td class="text-center select-none">
               <div *ngIf="errorWebs.length <= 0">
@@ -450,15 +443,15 @@
               <div *ngIf="errorWebs.length <= 0">
                 <a (click)="moveWebDown(idx)">{{ $t('_moveDown') }}</a>
               </div>
-              <a (click)="openEditModal(data)">{{ $t('_edit') }}</a>
+              <a (click)="openEditWebModal(data)">{{ $t('_edit') }}</a>
               <div *ngIf="errorWebs.length <= 0">
-                <a (click)="openMoveWebModal(data, idx)">{{ $t('_move') }}</a>
+                <a (click)="openMoveWebModal(data)">{{ $t('_move') }}</a>
               </div>
               <a
                 nz-popconfirm
                 [nzPopconfirmTitle]="$t('_confirmDel')"
                 nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleConfirmDelWeb(data)"
+                (nzOnConfirm)="handleDeleteWeb(data)"
                 class="color-red"
               >
                 {{ $t('_del') }}
@@ -504,8 +497,3 @@
     </nz-tab>
   </nz-tabset>
 </div>
-
-<edit-category
-  (onOk)="handleOk($event)"
-  [title]="isEdit ? $t('_edit') : $t('_add')"
-/>
