--- a/src/components/move-web/index.component.html
+++ b/src/components/move-web/index.component.html
@@ -14,9 +14,9 @@
       style="width: 160px"
     >
       <nz-option
-        *ngFor="let item of websiteList; index as idx"
+        *ngFor="let item of websiteList"
         [nzLabel]="item.title"
-        [nzValue]="idx"
+        [nzValue]="item.id"
       >
       </nz-option>
     </nz-select>
@@ -30,9 +30,9 @@
       *ngIf="level > 2"
     >
       <nz-option
-        *ngFor="let item of twoOptList; index as idx"
+        *ngFor="let item of twoOptions"
         [nzLabel]="item.title"
-        [nzValue]="idx"
+        [nzValue]="item.id"
       >
       </nz-option>
     </nz-select>
@@ -46,9 +46,9 @@
       *ngIf="level === 4"
     >
       <nz-option
-        *ngFor="let item of threeOptList; index as idx"
+        *ngFor="let item of threeOptions"
         [nzLabel]="item.title"
-        [nzValue]="idx"
+        [nzValue]="item.id"
       >
       </nz-option>
     </nz-select>
