--- a/src/view/sim/index.component.html
+++ b/src/view/sim/index.component.html
@@ -94,35 +94,22 @@
           <div class="nav-wrapper">
             <app-toolbar-title
               [dataSource]="item"
-              (onCollapse)="commonService.onCollapse(item, i)"
-              [index]="i"
-            ></app-toolbar-title>
+              (onCollapse)="commonService.onCollapse(item)"
+            />
 
             <div
-              nz-row
-              [nzGutter]="[16, 16]"
-              [style.display]="item.collapsed ? 'none' : ''"
+              class="px-3 grid gap-x-4 gap-y-3 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
+              [class.hidden]="item['collapsed']"
             >
-              <div
-                class="gutter-row"
-                nz-col
-                [nzSpan]="8"
-                [nzSm]="12"
-                [nzMd]="12"
-                [nzLg]="8"
-                [nzXs]="24"
+              <app-card
                 *ngFor="
                   let el of item.nav;
                   trackBy: commonService.trackByItemWeb
                 "
-              >
-                <app-card
-                  [cardStyle]="commonService.settings.simCardStyle"
-                  [dataSource]="el"
-                  [searchKeyword]="commonService.searchKeyword"
-                  class="column-border"
-                ></app-card>
-              </div>
+                [cardStyle]="commonService.settings.simCardStyle"
+                [dataSource]="el"
+                class="column-border"
+              ></app-card>
             </div>
           </div>
         </div>
